Agregada propiedad i18n al archivo angular.json

--- a/angular.json
+++ b/angular.json
@@ -101,6 +101,12 @@
             ]
           }
         }
+      },
+      "i18n": {
+        "sourceLocale": "es-CL",
+        "locales": {
+          "en": "src/locale/messages.en.xlf"
+        }
       }
     }
   }
